feat: basic api and workers

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,8 +1,18 @@
 {
+  "ConnectionStrings": {
+    "Redis": "redis://localhost:6379"
+  },
+  "PaymentProcessorDefault": {
+    "BaseUrl": "http://localhost:8001"
+  },
+  "PaymentProcessorFallback": {
+    "BaseUrl": "http://localhost:8002"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
   },
   "AllowedHosts": "*"
