--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Redis": "redis://localhost:6379"
+    "Redis": "localhost:6379"
   },
   "PaymentProcessorDefault": {
     "BaseUrl": "http://localhost:8001"
@@ -8,12 +8,12 @@
   "PaymentProcessorFallback": {
     "BaseUrl": "http://localhost:8002"
   },
+  "RunBackgroundService": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
