--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,9 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl \
+    && rm -rf /var/lib/apt/lists/* \
+    
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
@@ -7,10 +12,9 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Rinha.csproj", "src/"]
+COPY ["Rinha.csproj", "src/"]
 RUN dotnet restore "src/Rinha.csproj"
 COPY . .
-WORKDIR "/src/src"
 RUN dotnet build "./Rinha.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
