--- a/src/Rinha.csproj
+++ b/src/Rinha.csproj
@@ -15,4 +15,7 @@
       <Link>.dockerignore</Link>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="nginx.conf" />
+  </ItemGroup>
 </Project>
