--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,8 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    && rm -rf /var/lib/apt/lists/* \
+﻿FROM mcr.microsoft.com/dotnet/runtime-deps:9.0 AS base
     
 USER $APP_UID
 WORKDIR /app
@@ -11,6 +7,12 @@ EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
+
+# Install NativeAOT build prerequisites
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       clang zlib1g-dev
+
 WORKDIR /src
 COPY ["Rinha.csproj", "src/"]
 RUN dotnet restore "src/Rinha.csproj"
@@ -24,4 +26,5 @@ RUN dotnet publish "./Rinha.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:U
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Rinha.dll"]
+RUN ls
+ENTRYPOINT ["/app/Rinha"]
