--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -13,7 +13,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information",
+      "System.Net.Http.HttpClient": "Warning"
     }
   }
 }
