--- a/src/Rinha.csproj
+++ b/src/Rinha.csproj
@@ -5,10 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <OptimizationPreference>Speed</OptimizationPreference>
     <PublishAot>true</PublishAot>
+    <HttpActivityPropagationSupport>false</HttpActivityPropagationSupport>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.8" />
-    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.8.0" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\.dockerignore">
