--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,31 @@
 events {
-	worker_connections 2048;
+    worker_connections 1024;
 }
 
 http {
-	access_log off;
+    log_format custom '$time_iso8601 $request_method $uri $request_time';
 
-	upstream api {
-		server api1:8080;
-		server api2:8080;
-	}
+    # Map to determine if request should be logged (duration > 10ms = 0.010s)
+    map $request_time $loggable {
+        ~^0\.00[0-9] 0;     # 0.000-0.009 seconds (0-9ms) - don't log
+        default 1;          # everything else (>=10ms) - log
+    }
 
-	server {
-		listen 9999;
+    upstream api {
+       server api1:8080;
+       server api2:8080;
+    }
 
-		location / {
-			proxy_pass http://api;
-		}
-	}
+    server {
+       listen 9999;
+
+       # Only log requests where $loggable = 1
+       access_log /var/log/nginx/access.log custom if=$loggable;
+
+       location / {
+           proxy_buffering off;
+           proxy_http_version 1.1;
+           proxy_pass http://api;
+       }
+    }
 }
