feat: use postgres

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Redis": "localhost:6379"
+    "Postgres": "Host=localhost;Port=5432;Database=rinha;Username=postgres;Password=postgres;Minimum Pool Size=1;Maximum Pool Size=10;Max Auto Prepare=10;Auto Prepare Min Usages=1;"
   },
   "PaymentProcessorDefault": {
     "BaseUrl": "http://localhost:8001"
