--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@
     hostname: api1
     build: ./src
     depends_on:
-      redis:
+      postgres:
         condition: service_healthy
     environment:
-      ConnectionStrings__Redis: redis:6379
+      ConnectionStrings__Postgres: Host=postgres;Port=5432;Database=rinha;Username=postgres;Password=postgres;Minimum Pool Size=5;Maximum Pool Size=20;Connection Pruning Interval=3;Max Auto Prepare=10;Auto Prepare Min Usages=1;
       PaymentProcessorDefault__BaseUrl: http://payment-processor-default:8080
       PaymentProcessorFallback__BaseUrl: http://payment-processor-fallback:8080
     networks:
@@ -15,18 +15,18 @@
     deploy:
       resources:
         limits:
-          cpus: "0.55"
-          memory: "135MB"
+          cpus: "0.35"
+          memory: "100MB"
   
   api2:
     <<: *api1
     hostname: api2
     user: root
     depends_on:
-      redis:
+      postgres:
         condition: service_healthy
     environment:
-      ConnectionStrings__Redis: redis:6379
+      ConnectionStrings__Postgres: Host=postgres;Port=5432;Database=rinha;Username=postgres;Password=postgres;Minimum Pool Size=5;Maximum Pool Size=20;Connection Pruning Interval=3;Max Auto Prepare=10;Auto Prepare Min Usages=1;
       PaymentProcessorDefault__BaseUrl: http://payment-processor-default:8080
       PaymentProcessorFallback__BaseUrl: http://payment-processor-fallback:8080
       DOTNET_DiagnosticPorts: /diag/dotnet-monitor2.sock
@@ -58,24 +58,40 @@
     networks:
       - backend
 
-  redis:
-    image: redis
+  postgres:
+    image: postgres:17-alpine
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=rinha
     ports:
-      - "6379:6379"
-    command: [ "redis-server", "--save", "", "--appendonly", "no" ]
+      - "5432:5432"
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: [ "CMD-SHELL", "pg_isready -U postgres -d rinha" ]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 20s
+    depends_on:
+      - pgadmin
     networks:
       - backend
     deploy:
       resources:
         limits:
-          cpus: "0.20"
-          memory: "60MB"
+          cpus: "0.25"
+          memory: "130MB"
+  pgadmin:
+    image: dpage/pgadmin4
+    networks:
+      - backend
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "rafaelpadovezi@gmail.com"
+      PGADMIN_DEFAULT_PASSWORD: "admin"
   
   nginx:
     image: nginx
