--- a/src/Rinha.csproj
+++ b/src/Rinha.csproj
@@ -8,7 +8,7 @@
     <HttpActivityPropagationSupport>false</HttpActivityPropagationSupport>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.8" />
+    <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.8.0" />
   </ItemGroup>
   <ItemGroup>
